# ManaboGo

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: api.yml  web.yml
apps/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_content_schema.py  __init__.py
apps/api/app/: __init__.py  config.py  database.py
apps/api/app/auth/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  service.py  utils.py
apps/api/app/content/: router.py  schemas.py  service.py
apps/api/app/core/: __init__.py  exceptions.py
apps/api/app/users/: __init__.py  router.py  schemas.py  service.py
apps/api/scripts/: seed_n5_vocab.py
apps/api/tests/: conftest.py  test_auth.py
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
documents/00-DesignSystemSection/: README.md
documents/01-MonorepoSection/: README.md
documents/02-BackendStackSection/: README.md
documents/03-RegistrationSection/: README.md
documents/04-EmailVerificationSection/: README.md
documents/05-LoginSection/: README.md
documents/06-PasswordResetSection/: README.md
documents/07-RBACEngineSection/: README.md
documents/08-AccountSettingsSection/: README.md
documents/09-TwoFactorAuthSection/: README.md
documents/10-SocialLoginSection/: README.md
documents/11-I18nSection/: README.md
documents/12-CICDSection/: README.md
(+53 files in other folders)
